Revert "Use authentication"
This reverts commit ab09f6d3a9eef1b493effd316401feaf6fe05a48.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       traefik.enable: true
       traefik.http.services.traefik.loadbalancer.server.port: 8081
       traefik.http.routers.traefik.rule: Host(`traefik`)
-      traefik.http.routers.traefik.middlewares: trusted-ipallowlist, authentik@docker
+      traefik.http.routers.traefik.middlewares: trusted-ipallowlist
       traefik.http.middlewares.trusted-ipallowlist.ipallowlist.sourcerange: >
         2a00:23c8:bda0:b310::/64,
         10.10.0.0/16,
