--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       --certificatesResolvers.internal-ca.acme.httpChallenge=true
       --certificatesResolvers.internal-ca.acme.httpChallenge.entryPoint=http
       --serversTransport.rootCAs=/etc/ssl/certs/ca-certificates.crt
+      --metrics.prometheus=true
     network_mode: host
     ports:
       - "80:80"
