--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       --api=true
       --providers.docker
       --providers.docker.exposedByDefault=false
+      --providers.docker.network=proxy
       --entryPoints.http.address=":80"
       --entryPoints.https.address=":443"
       --entryPoints.http.http.redirections.entrypoint.to=https
