--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     command: >
       --api=true
       --log.level=INFO
+      --accesslog=true
       --providers.docker
       --providers.docker.exposedByDefault=false
       --providers.docker.network=proxy
