Reapply "Enable metrics"
This reverts commit 891ea04cfd782b185bab70bbac639fc0a4927fdc.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       --certificatesResolvers.internal-ca.acme.httpChallenge=true
       --certificatesResolvers.internal-ca.acme.httpChallenge.entryPoint=http
       --serversTransport.rootCAs=/etc/ssl/certs/ca-certificates.crt
+      --metrics.prometheus=true
     ports:
       - "80:80"
       - "443:443"
