--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   traefik:
     container_name: traefik
-    image: traefik
+    image: traefik:v3
     restart: unless-stopped
     command: >
       --api=true
